Solves bug #19567 by applying the bottom margin to the child p or div tag, making it possible to have the #siteNotice div always present and the notice content hidden, without adding the extra space.

--- a/skins/vector/main-rtl.css
+++ b/skins/vector/main-rtl.css
@@ -843,11 +843,13 @@ img.thumbborder {
 #siteNotice {
 	text-align: center;
 	font-size: 95%;
-	margin-bottom: 0.9em;
+	margin: 0;
 }
+	#siteNotice div,
 	#siteNotice p {
 		margin: 0;
 		padding: 0;
+		margin-bottom: 0.9em;
 	}
 /* Categories */
 .catlinks {
